--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,5 @@
 .home-page {
-  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 1rem;
 }
 
 /* Hero Section */
@@ -10,11 +8,17 @@
   background-size: cover;
   background-position: center;
   color: white;
+  height: 660px;
   text-align: center;
   padding: 6rem 1rem;
   margin-bottom: 3rem;
-  border-radius: 8px;
+  
+  display: flex; /* Enables Flexbox */
+  align-items: center; /* Centers vertically */
+  justify-content: center; /* Centers horizontally */
+  flex-direction: column; /* Stacks elements vertically */
 }
+
 
 .hero-content h1 {
   font-size: 2.5rem;
@@ -32,7 +36,10 @@
 /* Featured Destinations */
 .featured-destinations,
 .recent-blogs {
+  width: 1140px;
   margin-bottom: 4rem;
+  margin-left: auto; /* Push from the left */
+  margin-right: auto; /* Push from the right */
 }
 
 .featured-destinations h2,
@@ -106,7 +113,10 @@
 
 /* CTA Section */
 .cta-section {
-  background-color: var(--light-background);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1488085061387-422e29b40080?q=80&w=1931&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-size: cover;
+  background-position: center;
+  color: white;
   padding: 4rem 2rem;
   text-align: center;
   border-radius: 8px;
@@ -124,10 +134,9 @@
   margin-right: auto;
 }
 
-/* Responsive Design */
 @media (max-width: 1024px) {
   .destinations-grid {
-    grid-template-columns: repeat(2, 1fr); /* 2 cards in a row on tablets */
+    grid-template-columns: repeat(2, 1fr); 
   }
 }
 
@@ -142,7 +151,7 @@
 
   .destinations-grid,
   .blogs-grid {
-    grid-template-columns: 1fr; /* 1 card per row on smaller screens */
+    grid-template-columns: 1fr; 
   }
 
   .featured-destinations h2,
