--- a/src/components/admin/AdminSidebar.css
+++ b/src/components/admin/AdminSidebar.css
@@ -203,7 +203,7 @@
   .toggle-button {
     position: fixed;
     top: 1rem;
-    left: 1rem;
+    right: 1rem; /* Changed from left to right */
     background-color: #2c3e50;
     border-radius: 50%;
     width: 40px;
@@ -211,4 +211,3 @@
     z-index: 1001;
   }
 }
-
