--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -178,6 +178,7 @@
   object-fit: cover;
 }
 
+
 .profile-info h4 {
   margin: 0;
   font-size: 1rem;
@@ -191,6 +192,7 @@
 
 .profile-menu-items {
   padding: 0.5rem 0;
+  margin-top: -50px;
 }
 
 .profile-menu-item {
